Задание 5. Добавление spring-boot-starter-data-jpa

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 # Database
-db.url=jdbc:postgresql://localhost:5432/lesson_sql
-db.username=postgres
-db.password=postgres
+DB_URL:jdbc:postgresql://localhost:5432/lesson_sql
+DB_USERNAME:postgres
+DB_PASSWORD:postgres
